2006-04-11  Patrick van Staveren  <trick@vanstaveren.us>
	* Code structure changes - SleepTimerConfigDialog branched out of Plugin.cs
	* lots of RANDOM cleanups
	* Stock OK buttons
	* Load menu inserts after UI initializes (take advantage of newer override)

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
	* Volume fade is it's own class, and works in either direction.  Much cleaner looking.
	* Got rid of annoying popup when disabling plugin

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
	* Volume fade in simplified, scaled to the volume slider's resolution, and yeah, it works :)
	* removed some unnecessary this.xxx occurances

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>

	* Quick fix on dialog
	* Don't try to pause with sleep timer unless we're playing

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>

	* First hack at mixing Bertrand's code with my sleep timer
	* Lots 'o changes :)
	* Still lots to do :)
	* Alarm works, sleep timer works.  It's got the basics down!

2006-02-19  Bertrand Lorentz  <bertrand.lorentz@free.fr>

	* banshee-alarm: Initial revision of banshee-alarm plugin project
